--- a/index.html
+++ b/index.html
@@ -357,3 +357,6 @@ body {
         pointer-events: none;
 }
 </style>
+<footer style="text-align:center; color:#bfa14a; font-family:Georgia,serif; margin-bottom:1rem; font-size:1rem;">
+    &copy; 2023 Destello de Oro 18K. Todos los derechos reservados.
+</footer>
